err/dj-timelinejs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dj_timelinejs-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/timelinejs'...
Compiling './lib/python3.5/site-packages/timelinejs/models.py'...
***   File "./lib/python3.5/site-packages/timelinejs/models.py", line 224
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/timelinejs/static'...
Listing './lib/python3.5/site-packages/timelinejs/static/css'...
Listing './lib/python3.5/site-packages/timelinejs/static/css/themes'...
Listing './lib/python3.5/site-packages/timelinejs/static/css/themes/font'...
Listing './lib/python3.5/site-packages/timelinejs/static/js'...
Listing './lib/python3.5/site-packages/timelinejs/static/js/locale'...
Listing './lib/python3.5/site-packages/timelinejs/static/lib'...
Listing './lib/python3.5/site-packages/timelinejs/templates'...
Listing './lib/python3.5/site-packages/timelinejs/templates/timelinejs'...
Compiling './lib/python3.5/site-packages/timelinejs/views.py'...
***   File "./lib/python3.5/site-packages/timelinejs/views.py", line 54
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
